--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="text/javascript" src="lib/js/ngStorage.min.js"></script>
     <script type="text/javascript" src="lib/js/materialize.js"></script>
 	<script src="lib/js/autocomplete.js"></script>    
+
+    <script src="js/conf/uri.js"></script>
     
     <script src="js/app.js"></script>
 
