--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script type="text/javascript" src="lib/js/materialize.js"></script>
 	<script src="lib/js/autocomplete.js"></script>    
 
-    <script src="js/conf/uri.js"></script>
+    <script src="js/conf/path.js"></script>
     
     <script src="js/app.js"></script>
 
