Remover # das URL's.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="snietApp">
 <head>
+    <!-- <base href="/">-->
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -46,7 +47,7 @@
     <script src="js/controllers/registrarCtrl.js"></script>
     <script src="js/controllers/sobreCtrl.js"></script>
 
-    <script src="js/routes/routes.js"></script>
+    <script src="js/routes/routes.js"></script> 
     
   
 </head>
